# quadrank

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  release.toml  rust-toolchain.toml
.github/workflows/: test.yaml
evals/: binary.csv  cache-miss-table.py  cache-misses-laptop.csv  fm.csv  laptop.csv  plot-fm.py  plot-rank.py  plot.py  plot_rank.py  quad.csv  rank-server.csv  scaling-n.csv  server-n.csv  server.csv
examples/: bench.rs
fm-index/: Cargo.toml  data.csv  justfile  plot.py
fm-index/examples/: short_reads.rs
fm-index/src/: bwt.rs  fm.rs  main.rs  test.rs
fm-index/src/ext/: awry.rs
mapper/: Cargo.toml  data.csv  plot.py
mapper/src/: bwt.rs  caps_sa_test.rs  fm.rs  main.rs
quad-fm/: Cargo.toml
quad-fm/examples/: bench.rs  simulate_reads.rs
quad-fm/src/: bwt.rs  lib.rs  quad_fm.rs  test.rs
quad-fm/src/ext/: fm_crate.rs  genedex.rs
src/: binary.rs  blocks.rs  count.rs  count4.rs  genedex.rs  lib.rs  quad.rs  qwt.rs  ranker.rs  super_block.rs  sux.rs  test.rs  traits.rs
src/binary/: blocks.rs  ranker.rs  super_blocks.rs  test.rs
src/ext/: bio.rs  bitm.rs  genedex.rs  qwt.rs  rsdict.rs  succinct.rs  sucds.rs  sux.rs  vers.rs
src/quad/: blocks.rs  count1.rs  count4.rs  ranker.rs  super_blocks.rs  test.rs
