[package]
name = "quad-fm"
version = "0.1.0"
edition = "2024"
authors = ["Ragnar Groot Koerkamp"]
description = "Fast count-only FM-index size-4 DNA alphabets."
repository = "https://github.com/RagnarGrootKoerkamp/quadrank"
keywords = ['fm-index', 'prefetch', 'data-structure', 'succinct', 'bioinformatics']
categories = ["science"]
readme = "../README.md"
license = "MIT"
rust-version = "1.91"

[dependencies]
quadrank = { version = "0.1.0", path = ".." }
mem_dbg = "0.3.2"
libsais = "0.2.0"
rayon = "1.11.0"
bincode = "2.0.1"
needletail = "0.6.3"

# Optional external implementations
awry = { version = "0.3.1", optional = true }
genedex = { version = "0.2.2", optional = true }
fm-index = { version = "0.3.0", optional = true }
# for awry
tempfile = { version = "3.24.0", optional = true}

[dev-dependencies]
clap = { version = "4.5.51", features = ["derive"] }
rand = "0.9.2"
rand_distr = "0.5.1"
regex = "1.12.2"


[features]
# External implementations.
ext = ["dep:awry", "dep:genedex", "dep:fm-index", "dep:tempfile", "quadrank/ext"]

[[example]]
name = "bench"
required-features = ["ext"]

